--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,3 +29,13 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+# User configuration
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+set-window-option -g mode-keys vi
+
+if-shell "uname | grep -q Linux" "bind-key -t vi-copy Enter copy-pipe 'xsel -i -p'" "bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'"
