--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,4 +38,4 @@ bind l select-pane -R
 
 set-window-option -g mode-keys vi
 
-if-shell "uname | grep -q Linux" "bind-key -t vi-copy Enter copy-pipe 'xsel -i -p'" "bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'"
+if-shell "uname | grep -q Linux" "bind-key -t vi-copy Enter copy-pipe 'xsel -i -psb'" "bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'"
