--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,3 +39,6 @@ bind l select-pane -R
 set-window-option -g mode-keys vi
 
 if-shell "uname | grep -q Linux" "bind-key -t vi-copy Enter copy-pipe 'xsel -i -psb'" "bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'"
+
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
