修复tmux新版和系统剪贴板集成的问题

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
 # User configuration
 bind h select-pane -L
 bind j select-pane -D
@@ -38,7 +41,7 @@ bind l select-pane -R
 
 set-window-option -g mode-keys vi
 
-if-shell "uname | grep -q Linux" "bind-key -t vi-copy Enter copy-pipe 'xsel -i -psb'" "bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'"
+if-shell "uname | grep -q Linux" "bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xsel -i -psb'" "bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'"
 
 set -g default-shell $SHELL
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
